--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # === PostgreSQL ===
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres_support_bot
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 
@@ -10,9 +10,10 @@ spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:/liquibase/db.changelog.xml
 spring.liquibase.clear-checksums=true
 
-# === Telegram Bot ===
-telegram.bot.token= 8226502525:AAE0r-jguwm69b2v8RrcUzoOD5aNyxW4nNw
-telegram.bot.username= NSConnect24Bot
+
+# === Telegram ===
+telegram.bot.token=${TELEGRAM_BOT_TOKEN}
+telegram.bot.username=${TELEGRAM_BOT_USERNAME}
 
 # === Swagger ===
 springdoc.api-docs.path=/api-docs
